--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -9,3 +9,12 @@ services:
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
   image_resizer:
     class: AppBundle\Services\ImageResizer
+  test_listener:
+    class: AppBundle\Listener\TestListener
+    tags:
+      - { name: kernel.event_listener, method: yo, event: kernel.request }
+    arguments: ["@doctrine"]
+  custom_listener:
+      class: AppBundle\Listener\CustomListener
+      tags:
+        - { name: kernel.event_listener, method: customHandler, event: custom.test_event }
